<resources>
    <string name="app_name">NavigationComponentFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Botones-->
    <string name="btnAtras">Atrás</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnHome">Home</string>
    <string name="btnfragment1">Ir fragment 1</string>
    <string name="btnfragment2">Ir fragment 2</string>
    <!--TextView-->
    <string name="tv1">1</string>
    <string name="tv2">2</string>
    <string name="tv3">3</string>
    <string name="tvInicio">INICIO</string>
</resources>