<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioFragment"
    android:background="@android:color/holo_red_dark">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvInicio"
        android:layout_gravity="center"
        android:textSize="100sp"/>

    <Button
        android:id="@+id/btnfragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnfragment1"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnfragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnfragment2"
        android:layout_marginStart="170dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="130dp"/>

    <EditText
        android:id="@+id/etuser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="130dp"/>

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:inputType="textPassword"/>

</FrameLayout>